--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,9 @@
     <string name="refuse">拒绝</string>
 
     <string name="basic">常规</string>
-    <string name="fix_user_profile">修复系统双开</string>
+    <string name="toast_when_using_dhizuku">权限提示</string>
+    <string name="toast_when_using_dhizuku_dsp">当有程序在调用 Dhizuku 时，弹出消息提示</string>
+    <string name="toast_when_using_dhizuku_content">Dhizuku 权限正在被使用：%1$s </string>
 
     <string name="service_channel_name">后台服务</string>
     <string name="service_running">Dhizuku正在运行</string>
