--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,7 +40,7 @@
     <string name="empty_config_dsp">There is no application to request for Dhizuku</string>
     <string name="service_channel_name">Background service</string>
     <string name="service_running">Dhizuku is running</string>
-    <string name="active_by_adb_dsp">%1$s&lt;br&gt;&lt;br&gt;* Activation by adb (connect computer)，go to &lt;a href=https://source.android.google.cn/docs/setup/build/adb\?hl=zh-cn&gt;Android Debug Bridge&lt;/a&gt;or more adb related information.</string>
+    <string name="active_by_adb_dsp">%1$s&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;* Activation by adb (connect computer)，go to &amp;lt;a href=https://source.android.google.cn/docs/setup/build/adb\?hl=zh-cn&amp;gt;Android Debug Bridge&amp;lt;/a&amp;gt;or more adb related information.</string>
     <string name="shizuku_binder_not_received">Check whether Shizuku is installed and activated, and allow the Dhizuku to obtain Shizuku permission.</string>
     <string name="deactivate">Deactivate</string>
 </resources>
