--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,62 +1,64 @@
 <resources>
     <string name="app_name" translatable="false">Dhizuku</string>
-    <string name="home">主页</string>
-    <string name="config">配置</string>
-    <string name="preferred">设置</string>
+    <string name="home">Home</string>
+    <string name="config">Configuration</string>
+    <string name="preferred">Settings</string>
 
-    <string name="device_owner_granted">已获得设备所有者权限</string>
-    <string name="device_admin_granted">未完全激活，已获得设备管理员</string>
-    <string name="device_admin_denied">未激活</string>
+    <string name="device_owner_granted">Activated</string>
+    <string name="device_admin_granted">Device admin activated, but need device owner</string>
+    <string name="device_admin_denied">Waiting for activation</string>
 
-    <string name="active_func_dsp">设备所有者（DeviceOwner）权限高于设备管理员（DeviceAdmin），一次激活永久有效，除非您主动取消激活。\n\n请谨慎授权给其余应用，设备管理员可通过代码修改诸多系统设置，比如：禁用软硬件功能与监听用户行为等。</string>
+    <string name="active_func_dsp">DeviceOwner has higher permission than DeviceAdmin. Permissions will not be lost unless you deactivate them.
+\n
+\nAuthorize other applications with caution. Device owner can modify system Settings using codes, such as disable software and hardware functions and monitor user behaviors.</string>
 
-    <string name="active">激活</string>
-    <string name="cancel">取消</string>
-    <string name="confirm">确认</string>
-    <string name="finish">完成</string>
+    <string name="active">Activate</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">OK</string>
+    <string name="finish">Finish</string>
 
-    <string name="active_by_adb">电脑激活</string>
-    <string name="active_by_adb_dsp">%1$s&lt;br&gt;&lt;br&gt;* 借助 adb 来设置设备所有者（连接电脑），前往&lt;a href=https://source.android.google.cn/docs/setup/build/adb?hl=zh-cn&gt;Android 调试桥 (ADB)&lt;/a&gt;了解更多与 adb 相关的信息。</string>
+    <string name="active_by_adb">Activation by computer</string>
+    <string name="active_by_adb_dsp">%1$s&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;* Activation by adb (connect computer)，go to &amp;lt;a href=https://source.android.google.cn/docs/setup/build/adb&amp;gt;Android Debug Bridge&amp;lt;/a&amp;gt;or more adb related information.</string>
 
-    <string name="active_by_shizuku">Shizuku 激活</string>
-    <string name="shizuku_binder_not_received">请先检查 Shizuku 是否安装、激活，并同意软件获取 Shizuku 权限。</string>
+    <string name="active_by_shizuku">Activation by Shizuku</string>
+    <string name="shizuku_binder_not_received">Check whether Shizuku is installed and activated, and allow the Dhizuku to obtain Shizuku permission.</string>
 
-    <string name="execution_end">执行结束，请检查是否激活。</string>
+    <string name="execution_end">OK, check the activation status.</string>
 
-    <string name="deactivate">取消激活</string>
-    <string name="deactivate_dsp">确认要取消激活吗？</string>
-    <string name="deactivate_success">取消激活成功</string>
-    <string name="deactivate_failed">取消激活失败</string>
+    <string name="deactivate">Deactivate</string>
+    <string name="deactivate_dsp">Are you sure you want to deactivate?</string>
+    <string name="deactivate_success">Successful deactivation</string>
+    <string name="deactivate_failed">Deactivation failure</string>
 
-    <string name="force_stop">强行停止</string>
-    <string name="force_stop_dsp">当设备所有者激活成功后，系统没有权限强行停止设备所有者应用运行，但是更新应用需要先将应用停止，所以你需要先将 Dhizuku 强行停止，再更新 Dhizuku。</string>
+    <string name="force_stop">Force stop</string>
+    <string name="force_stop_dsp">After the device owner successfully activates, the system does not have permission to forcibly stop the device owner application running, but updating the application requires stopping the application first, so you need to forcibly stop Dhizuku before updating Dhizuku.</string>
 
-    <string name="dhizuku_permission_group_label">Dhizuku 权限</string>
+    <string name="dhizuku_permission_group_label">Dhizuku permission</string>
     <string name="dhizuku_permission_group_dsp" translatable="false">@string/dhizuku_permission_group_label</string>
     <string name="dhizuku_permission_api_label" translatable="false">@string/dhizuku_permission_group_label</string>
 
-    <string name="dhizuku_permission_api_dsp">允许应用使用 Dhizuku。</string>
+    <string name="dhizuku_permission_api_dsp">Allow other application use Dhizuku permission.</string>
 
-    <string name="copy">复制</string>
-    <string name="copy_success">复制成功</string>
+    <string name="copy">Copy</string>
+    <string name="copy_success">Copy successfully</string>
 
-    <string name="donate">捐赠</string>
-    <string name="alipay">支付宝</string>
-    <string name="wechat">微信</string>
-    <string name="binance">币安</string>
+    <string name="donate">Donate</string>
+    <string name="alipay">Alipay</string>
+    <string name="wechat">Wechat</string>
+    <string name="binance">Binance</string>
 
-    <string name="request_permission_title">Dhizuku 授权</string>
-    <string name="request_permission_text"><![CDATA[授权<b>%1$s</b>使用 Dhizuku 吗？]]></string>
-    <string name="agree">同意</string>
-    <string name="refuse">拒绝</string>
+    <string name="request_permission_title">Dhizuku Permission Request</string>
+    <string name="request_permission_text"><![CDATA[Agree to the Dhizuku permission request of <b>%1$s</b>\?]]></string>
+    <string name="agree">Grant</string>
+    <string name="refuse">Deny</string>
 
-    <string name="basic">常规</string>
-    <string name="toast_when_using_dhizuku">权限提示</string>
-    <string name="toast_when_using_dhizuku_dsp">当有程序在调用 Dhizuku 时，弹出消息提示</string>
-    <string name="toast_when_using_dhizuku_content">Dhizuku 权限正在被使用：%1$s </string>
+    <string name="basic">Normal</string>
+    <string name="toast_when_using_dhizuku">Permission prompt</string>
+    <string name="toast_when_using_dhizuku_dsp">When a program calls Dhizuku, a pop-up message prompts</string>
+    <string name="toast_when_using_dhizuku_content">The Dhizuku is being used by %1$s</string>
 
-    <string name="empty_config_dsp">暂无应用申请 Dhizuku 权限</string>
+    <string name="empty_config_dsp">There is no application to request for Dhizuku permission</string>
 
-    <string name="service_channel_name">后台服务</string>
-    <string name="service_running">Dhizuku正在运行</string>
+    <string name="service_channel_name">Background service</string>
+    <string name="service_running">Dhizuku is running</string>
 </resources>
