--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name" translatable="false">Dhizuku</string>
+    <string name="agreement_title">Policy</string>
+    <string name="agreement_text">Here is our user policy, Please read and agree to it. &lt;a href=&quot;https://iamr0s.github.io/Dhizuku/TERMS.html&quot;&gt;Terms of Use&lt;/a&gt;, &lt;a href=&quot;https://iamr0s.github.io/Dhizuku/PRIVACY.html&quot;&gt;Privacy Policy&lt;/a&gt; This message won\'t show up again after you agree.</string>
+    <string name="agree_text">Agree</string>
     <string name="permission_description">Use Dhizuku\'s API</string>
     <!-- Commonly  used characters -->
     <string name="copy">Copy</string>
